RESOLVED FIXED214626
REGRESSION(r205826): narrowNoBreakSpace (U+202F) has zero width, regardless of font
https://bugs.webkit.org/show_bug.cgi?id=214626
Summary REGRESSION(r205826): narrowNoBreakSpace (U+202F) has zero width, regardless o...
Myles C. Maxfield
Reported 2020-07-21 21:27:18 PDT
From static void overrideControlCharacters() in Font.cpp: overwriteCodePoint(narrowNoBreakSpace, zeroWidthSpace); This is bogus. Also, this is becoming much more prominent now because a lot of the French unit formatting data in CLDR - and hence in e.g. NSMeasurementFormatter - uses 202F between numeric value and unit, e.g. "37 km" It works in native content on macOS, and in all other browsers on macOS, but not in WebKit.
Attachments
Patch (3.60 KB, patch)
2020-07-21 21:31 PDT, Myles C. Maxfield
no flags
Patch (5.68 KB, patch)
2020-07-21 23:43 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2020-07-21 21:27:31 PDT
Myles C. Maxfield
Comment 2 2020-07-21 21:31:51 PDT
Myles C. Maxfield
Comment 3 2020-07-21 23:43:45 PDT
EWS
Comment 4 2020-07-22 11:28:36 PDT
Committed r264714: <https://trac.webkit.org/changeset/264714> All reviewed patches have been landed. Closing bug and clearing flags on attachment 404903 [details].
Note You need to log in before you can comment on or make changes to this bug.