Source/WebCore/platform/graphics/Font.cpp
@@ -301,7 +301,6 @@ static void overrideControlCharacters(Vector<UChar>& buffer, unsigned start, uns
     overwriteCodePoint('\n', space);
     overwriteCodePoint('\t', space);
     overwriteCodePoint(noBreakSpace, space);
-    overwriteCodePoint(narrowNoBreakSpace, zeroWidthSpace);
     overwriteCodePoint(leftToRightMark, zeroWidthSpace);
     overwriteCodePoint(rightToLeftMark, zeroWidthSpace);
     overwriteCodePoint(leftToRightEmbed, zeroWidthSpace);
